RELEASE NOTES
---

## Pre-Version 1.6.9.0

Version 1.6.8.1
- Fixed some protocols based on hostname -> there are 8 protocol based on the hostname that does not exist anymore
- Fixed memory leaks in PROTO_NFS
- Fixed classification of PROTO_MANOLITO
- Fixed classification of PROTO_VNC: classified by port number - 5900, 5901, 5800 - nDPI

## Version 1.6.8.0
- Change package name (of .deb file) from mmt-sdk to mmt-dpi
- Fixed classification of PROTO_MSSQL
- Added classification of PROTO_PTP over ETHERNET (Need to do for PROTO_PTP Over UDP)
- Added classification of PROTO_PPP over ETHERNET
- Added classification of PROTO_FC over ETHERNET
- Added classification of PROTO_GTP
- Added classification of PPP over GRE
- Updated all application protocols which based on IP ranges
- Updated all application protocols which based on hostname
- Update with some optimisations in classifying protocol based on hostname and parsing HTTP header value
- Remove some APIs: unused (register_attribute), need to private (mmt_drop_packet,..)
- Add patch to fix the classification of Application protocol base on hostname
- Extract more HTTP header fields: Connection, Upgrade
- Cover also the header fields name is lowercase, uppercase, ...
- Fixed FTP/TCP/IPv6 segmentation fault and some memory leaks in proto_ftp.c
- Move some IP statistics to IP protocol: active_session, timedout_session, defragmentation, ....
- Fixed IP options pointer

## Version 1.6.7.0
- Fixed buffer overflow when working with HTTP header field
- Fixed in FTP protocol: check tuple6==NULL and memory leak
- 1.6.6.1 - Fixed problem with IP fragmentation
- 1.6.6.2 - Revert to not copy IP address when building session key
- Fixed in HTTP protocol and SSL protocol: Change excluded_protocol_bitmask
- Fixed problem with IP Defragmentation and Packet padding
- Add PROTO_UNKNOWN after TCP if cannot classify TCP payload
- Refactory Makefile with some compiling options: 
	+ NDEBUG = 1 : show all messages in debug(...), 