@@ -8,6 +8,8 @@ Version 1.6.8.1
 - Fixed memory leaks in PROTO_NFS
 - Fixed classification of PROTO_MANOLITO
 - Fixed classification of PROTO_VNC: classified by port number - 5900, 5901, 5800 - nDPI
+- Fixed classification of PROTO_EDONKEY: payload_len = 6 and some specific characters ('server status request') : resource - https://www.symantec.com/connect/articles/identifying-p2p-users-using-traffic-analysis
+
 
 ## Version 1.6.8.0
 - Change package name (of .deb file) from mmt-sdk to mmt-dpi
